--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,7 @@
   align-items: center;
 }
 
-.information input {
+input {
   width: 300px;
   height: 50px;
   font-size: 20px;
@@ -27,6 +27,16 @@ button {
 
 button:hover {
   cursor: pointer;
+}
+
+.employee {
+  width: 700px;
+  height: auto;
+  border: 1px solid black;
+  margin: 10px;
+  display: flex;
+  padding: 10px;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .employees {
